# ModelVisio

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  edgemodel-studio-v3.jsx  netlify.toml  package.json  pnpm-lock.yaml  real_score report  tsconfig.base.json
.github/workflows/: desktop-build-check.yml  desktop-release.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/vscode/: .vscodeignore  README.md  package.json  tsconfig.ext.json  tsconfig.webview.json  vite.webview.config.ts
apps/vscode/media/: webview.js
apps/vscode/media/assets/: parse.worker-CW3eTz_I.js
apps/vscode/src/: extension.ts  modelEditorProvider.ts
apps/vscode/webview/: main.tsx
apps/web/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/web/api/: chat.ts
apps/web/public/: manifest.webmanifest
apps/web/src/: index.css  main.tsx  tauri.ts
docs/: roofline-scoring-research.md
netlify/functions/: chat.ts
scripts/: release-desktop.mjs  stamp-version.mjs
